--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -25,7 +25,7 @@
     border-radius: 18px;
     background-color: rgba(255, 255, 255, 0);
     box-shadow: none;
-    color: #000;
+    color: rgba(19, 23, 46, 0.9);
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
